--- a/SPUpdateFramework/SPUpdateFramework.csproj
+++ b/SPUpdateFramework/SPUpdateFramework.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0-windows</TargetFramework>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>preview</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
