Untracked .pem files and added *.pem to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,5 @@ publish/
 
 # Custom files/directories
 /SPPaginationDemo/UpdateAsseblies/*
-
-# Add any custom file extensions or directories that you want to ignore
-
+*.pem
+/SPPaginationDemo/EncryptionKeys/public_key.pem
