Fixed Path.Combine error missing private_key

--- a/.gitignore
+++ b/.gitignore
@@ -68,4 +68,4 @@ publish/
 # Custom files/directories
 /SPPaginationDemo/UpdateAsseblies/*
 *.pem
-/SPPaginationDemo/EncryptionKeys/public_key.pem
+*.zip
