--- a/SP6LogicDemoBlueprint/SP6LogicDemoBlueprint.csproj
+++ b/SP6LogicDemoBlueprint/SP6LogicDemoBlueprint.csproj
@@ -23,10 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="method_body_template.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="web_client_template.txt">
+    <None Update="CodeTemplates\*.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
