--- a/SPPaginatedGridControl/Properties/launchSettings.json
+++ b/SPPaginatedGridControl/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SPPaginatedGridControl": {
       "commandName": "Project",
-      "commandLineArgs": "int.MaxValue"
+      "commandLineArgs": "50"
     }
   }
 }
