--- a/SPPaginationDemo/SPPaginationDemo.csproj
+++ b/SPPaginationDemo/SPPaginationDemo.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="ADO.Net.Client.Core" Version="1.4.5" />
+    <PackageReference Include="AspectInjector" Version="2.8.2" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Basic.Reference.Assemblies.Net70" Version="1.4.2" />
     <PackageReference Include="Microsoft.Azure.NotificationHubs" Version="4.1.0" />
